<resources>
    <string name="app_name">IC09</string>
    <string name="et_emailMain" />
    <string name="hint_emailMain">Email</string>
    <string name="et_passwordMain" />
    <string name="hint_passwordMain">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signUpMain">Sign Up</string>
    <string name="et_firstName" />
    <string name="hint_firstName">First Name</string>
    <string name="et_lastName" />
    <string name="hint_lastName">Last Name</string>
    <string name="hint_emailSignUp">Email</string>
    <string name="hint_password1">Choose Password</string>
    <string name="et_password2">Repeat Password</string>
    <string name="btn_SignUp2">Sign Up</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_fullName" />
    <string name="tv_inboxFullName" />
    <string name="tv_subject" />
    <string name="tv_date" />
    <string name="tv_sendTo">Send To:</string>
    <string name="hint_subject">Subject</string>
    <string name="tv_message">Message</string>
    <string name="btn_send">Send</string>
    <string name="btn_cancelNewEmail">Cancel</string>
    <string name="tv_sender" />
    <string name="btn_close">Close</string>
    <string name="tv_subject_display" />
    <string name="tv_message_display" />
    <string name="tv_createdAt" />
</resources>
