<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:id="@+id/relative_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/hint_firstName"
            android:inputType="textPersonName"
            android:text="@string/et_firstName" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_firstName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/hint_lastName"
            android:inputType="textPersonName"
            android:text="@string/et_lastName" />

        <EditText
            android:id="@+id/et_emailSignUp"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_lastName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/hint_emailSignUp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_emailSignUp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="82dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/hint_password1"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="84dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/et_password2"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_SignUp2"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="114dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="95dp"
            android:text="@string/btn_SignUp2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_SignUp2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="114dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="95dp"
            android:text="@string/btn_cancel" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>