<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_emailMain"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="91dp"
            android:layout_marginTop="246dp"
            android:layout_marginEnd="45dp"
            android:ems="10"
            android:hint="@string/hint_emailMain"
            android:inputType="textPersonName"
            android:text="@string/et_emailMain" />

        <EditText
            android:id="@+id/et_passwordMain"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_emailMain"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="91dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="45dp"
            android:ems="10"
            android:hint="@string/hint_passwordMain"
            android:inputType="textPersonName"
            android:text="@string/et_passwordMain" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_passwordMain"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="133dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="133dp"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_signUpMain"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="133dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="133dp"
            android:text="@string/btn_signUpMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>