<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMailActivity">

    <TextView
        android:id="@+id/tv_sender"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_sender"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createdAt" />

    <TextView
        android:id="@+id/tv_subject_display"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_subject"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sender" />

    <TextView
        android:id="@+id/tv_message_display"
        android:layout_width="347dp"
        android:layout_height="395dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_message_display"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_display" />

    <TextView
        android:id="@+id/tv_createdAt"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_createdAt"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_display" />
</androidx.constraintlayout.widget.ConstraintLayout>