<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewEmailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/sp_users"
            android:layout_width="222dp"
            android:layout_height="39dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="29dp" />

        <TextView
            android:id="@+id/tv_sendTo"
            android:layout_width="105dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="29dp"
            android:text="@string/tv_sendTo"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_subject"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sp_users"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="29dp"
            android:ems="10"
            android:hint="@string/hint_subject"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="354dp"
            android:layout_height="37dp"
            android:layout_below="@+id/et_subject"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="29dp"
            android:text="@string/tv_message"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="349dp"
            android:layout_height="421dp"
            android:layout_below="@+id/tv_message"
            android:layout_alignParentStart="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="33dp"
            android:text="@string/btn_send" />

        <Button
            android:id="@+id/btn_cancelNewEmail"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="36dp"
            android:text="@string/btn_cancelNewEmail" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>